--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ script:
     - chmod 400 acceso_instancia.pem
     - ssh-keyscan -H 34.217.211.30 >> ~/.ssh/known_hosts
     - ssh-keyscan -H ec2-34-217-211-30.us-west-2.compute.amazonaws.com >> ~/.ssh/known_hosts
-    - scp -i acceso_instancia.pem target/Netflix-1.0-SNAPSHOT.war ubuntu@34.217.211.30:/tmp
+    - ssh -i acceso_instancia.pem ubuntu@34.217.211.30 "rm -rf /var/lib/tomcat8/webapps/Netflix*"
+    - scp -i acceso_instancia.pem target/Netflix-1.0-SNAPSHOT.war ubuntu@34.217.211.30:/var/lib/tomcat8/webapps/Netflix.war
